# werv

./: .gitignore  Cargo.toml  Makefile  test.sh  werv.code-workspace
compiler/wervc/: Cargo.toml
compiler/wervc/src/: lib.rs
compiler/wervc_ast/: Cargo.toml
compiler/wervc_ast/src/: lib.rs  ty.rs
compiler/wervc_compiler/: Cargo.toml
compiler/wervc_compiler/src/: error.rs  lib.rs
compiler/wervc_environment/: Cargo.toml
compiler/wervc_environment/src/: lib.rs
compiler/wervc_eval/: Cargo.toml
compiler/wervc_eval/src/: builtin.rs  environment.rs  error.rs  lib.rs  test.rs
compiler/wervc_interpreter/: Cargo.toml
compiler/wervc_interpreter/src/: lib.rs
compiler/wervc_lexer/: Cargo.toml
compiler/wervc_lexer/src/: lexer.rs  token.rs
compiler/wervc_lexer/src/lexer/: test.rs
compiler/wervc_object/: Cargo.toml
compiler/wervc_object/src/: lib.rs
compiler/wervc_parser/: Cargo.toml
compiler/wervc_parser/src/: parser.rs
compiler/wervc_parser/src/parser/: error.rs  test.rs
compiler/wervc_type/: Cargo.toml
compiler/wervc_type/src/: error.rs  lib.rs  test.rs
repl/: Cargo.toml
repl/src/: lib.rs
src/: ast.rs  builtin.rs  environment.rs  eval.rs  io.rs  lexer.rs  lib.rs  main.rs  object.rs  parser.rs  repl.rs  token.rs
src/eval/: error.rs  test.rs
src/lexer/: cursor.rs  error.rs  test.rs  token.rs
src/parser/: ast.rs  error.rs  escape.rs  test.rs
test/: func.c
