[package]
name = "werv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wervc = { path = "compiler/wervc" }
repl = { path = "repl" }

[workspace]
members = [
    "compiler/wervc",
    "compiler/wervc_ast",
    "compiler/wervc_compiler",
    "compiler/wervc_eval",
    "compiler/wervc_interpreter",
    "compiler/wervc_lexer",
    "compiler/wervc_object",
    "compiler/wervc_parser",
    "repl",
]
