[package]
name = "wervc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wervc_lexer = { path = "../wervc_lexer" }
wervc_parser = { path = "../wervc_parser" }
wervc_ast = { path = "../wervc_ast" }
wervc_object = { path = "../wervc_object" }
wervc_eval = { path = "../wervc_eval" }
